--- a/notebooks/jss_data_tvdb_api.ipynb
+++ b/notebooks/jss_data_tvdb_api.ipynb
@@ -2,16 +2,296 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-11T01:17:42.812095Z",
-     "start_time": "2019-07-11T01:17:42.807376Z"
+     "end_time": "2019-07-11T14:22:14.736465Z",
+     "start_time": "2019-07-11T14:22:14.730924Z"
     }
    },
    "outputs": [],
    "source": [
-    "import tmdbsimple as tmdb"
+    "# Import tmdb api wrapper library\n",
+    "import tmdbsimple as tmdb\n",
+    "\n",
+    "# Import JSON\n",
+    "import json\n",
+    "\n",
+    "# import time for sleeping and scraping\n",
+    "import time\n",
+    "\n",
+    "# Import the usual suspects\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "# pickle for saving and loading scraped info\n",
+    "import pickle\n",
+    "\n",
+    "\n",
+    "from timeit import default_timer as timer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-11T14:12:28.121025Z",
+     "start_time": "2019-07-11T14:12:28.109140Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Import api key\n",
+    "tmdb.API_KEY = open('../api_key', 'rt').read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-11T14:12:29.214117Z",
+     "start_time": "2019-07-11T14:12:28.901782Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Load list of json info for all currently valid TV shows\n",
+    "tv_series_json = [json.loads(line) for line in open('../data/raw/tv_series_ids_07_09_2019.json', 'r')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-11T14:12:29.960063Z",
+     "start_time": "2019-07-11T14:12:29.948493Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Extract ids into list\n",
+    "tv_series_id = [x['id'] for x in tv_series_json]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-11T14:12:30.586355Z",
+     "start_time": "2019-07-11T14:12:30.581320Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[601, 602, 603, 604, 605, 606, 607, 608, 609, 610, 611, 612, 613, 614, 615, 616, 617, 618, 619, 620, 621, 622, 623, 625, 626, 627, 628, 629, 630, 631, 632, 633, 634, 635, 636, 637, 638, 639, 640, 641, 642, 643, 644, 645, 646, 647, 648, 649, 650, 651, 652, 653, 654, 655, 656, 657, 658, 660, 661, 662, 663, 664, 665, 666, 667, 668, 669, 670, 671, 672, 673, 674, 675, 676, 677, 678, 679, 680, 681, 682, 683, 684, 685, 686, 687, 688, 689, 690, 691, 692, 693, 694, 695, 696, 697, 698, 699, 700, 701, 702]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tv_series_id[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-11T15:15:31.303751Z",
+     "start_time": "2019-07-11T15:15:29.619225Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41269"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load existing pickles into list\n",
+    "\n",
+    "tv_shows_info = []\n",
+    "\n",
+    "f_num = 0\n",
+    "exists = True\n",
+    "while(exists):\n",
+    "    f_num += 1\n",
+    "    exists = os.path.isfile(\n",
+    "        '../data/processed/tv_shows_info_{}.pkl'.format(f_num))\n",
+    "\n",
+    "    if exists:\n",
+    "        with open('../data/processed/tv_shows_info_{}.pkl'.format(f_num), 'rb') as f:\n",
+    "            mynewlist = pickle.load(f)\n",
+    "        tv_shows_info.extend(mynewlist)\n",
+    "    \n",
+    "\n",
+    "len(tv_shows_info)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-11T15:15:33.110816Z",
+     "start_time": "2019-07-11T15:15:33.090318Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41269\n",
+      "[601, 602, 603, 604, 605, 606, 607, 608, 609, 610, 611, 612, 613, 614, 615, 616, 617, 618, 619, 620, 621, 622, 623, 625, 626, 627, 628, 629, 630, 631, 632, 633, 634, 635, 636, 637, 638, 639, 640, 641, 642, 643, 644, 645, 646, 647, 648, 649, 650, 651, 652, 653, 654, 655, 656, 657, 658, 660, 661, 662, 663, 664, 665, 666, 667, 668, 669, 670, 671, 672, 673, 674, 675, 676, 677, 678, 679, 680, 681, 682, 683, 684, 685, 686, 687, 688, 689, 690, 691, 692, 693, 694, 695, 696, 697, 698, 699, 700, 701, 702]\n"
+     ]
+    }
+   ],
+   "source": [
+    "already_scraped_id = [x['id'] for x in tv_shows_info]\n",
+    "print(len(already_scraped_id))\n",
+    "print(already_scraped_id[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-11T15:21:53.919487Z",
+     "start_time": "2019-07-11T15:15:36.770090Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of shows to scrape: 41555\n",
+      "100\n",
+      "24.32125218003057 seconds\n",
+      "200\n",
+      "24.76547364902217 seconds\n",
+      "300\n",
+      "27.978869884973392 seconds\n",
+      "400\n",
+      "23.449620346014854 seconds\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-beb43bb856db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m             \u001b[0mtv_show\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtmdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m             \u001b[0mtv_info\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtv_show\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m             \u001b[0mtemp_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtv_info\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/envs/learn-env/lib/python3.6/site-packages/tmdbsimple/tv.py\u001b[0m in \u001b[0;36minfo\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_GET\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_set_attrs_to_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/envs/learn-env/lib/python3.6/site-packages/tmdbsimple/base.py\u001b[0m in \u001b[0;36m_GET\u001b[0;34m(self, path, params)\u001b[0m\n\u001b[1;32m     84\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_GET\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_request\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'GET'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/envs/learn-env/lib/python3.6/site-packages/tmdbsimple/base.py\u001b[0m in \u001b[0;36m_request\u001b[0;34m(self, method, path, params, payload)\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m         \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_for_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m         \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/envs/learn-env/lib/python3.6/site-packages/requests/models.py\u001b[0m in \u001b[0;36mraise_for_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    939\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mhttp_error_msg\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 940\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mHTTPError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhttp_error_msg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    941\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mHTTPError\u001b[0m: 404 Client Error: Not Found for url: https://api.themoviedb.org/3/tv/30928?api_key=588600b7aa1b91724b31254ed9fcdf13",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-beb43bb856db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0mno_show\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m             \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0mcount\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# scrape info for all tv shows\n",
+    "count = 0\n",
+    "\n",
+    "remaining_tv_id = list(set(tv_series_id)-set(already_scraped_id))\n",
+    "print('number of shows to scrape: {}'.format(len(remaining_tv_id)))\n",
+    "\n",
+    "# start new empty list to temporarily store results\n",
+    "temp_list = []\n",
+    "\n",
+    "start = timer()\n",
+    "for i in remaining_tv_id:\n",
+    "    no_show = True\n",
+    "    while no_show:\n",
+    "        try:\n",
+    "            tv_show = tmdb.TV(i)\n",
+    "            tv_info = tv_show.info()\n",
+    "            temp_list.append(tv_info)\n",
+    "            no_show = False\n",
+    "        except:\n",
+    "            time.sleep(2)\n",
+    "    count+=1\n",
+    "    if count%100==0: \n",
+    "        print(count)\n",
+    "        end = timer()\n",
+    "        print('{} seconds'.format(end - start))\n",
+    "        start = timer()\n",
+    "    if count%1000==0:\n",
+    "        f_num = 0\n",
+    "        exists = True\n",
+    "        while(exists):\n",
+    "            f_num += 1\n",
+    "            exists = os.path.isfile(\n",
+    "                '../data/processed/tv_shows_info_{}.pkl'.format(f_num))\n",
+    " \n",
+    "        if not exists:\n",
+    "            with open('../data/processed/tv_shows_info_{}.pkl'.format(f_num), 'wb') as f:\n",
+    "                pickle.dump(temp_list, f)\n",
+    "            print('saved to: ../data/processed/tv_shows_info_{}.pkl'.format(f_num))\n",
+    "            temp_list = []\n",
+    "\n",
+    "            \n",
+    "# once more at the end to catch any remaining\n",
+    "f_num = 0\n",
+    "exists = True\n",
+    "while(exists):\n",
+    "    f_num += 1\n",
+    "    exists = os.path.isfile(\n",
+    "        '../data/processed/tv_shows_info_{}.pkl'.format(f_num))\n",
+    "\n",
+    "if not exists:\n",
+    "    with open('../data/processed/tv_shows_info_{}.pkl'.format(f_num), 'wb') as f:\n",
+    "        pickle.dump(tv_shows_info, f)\n",
+    "    print('saved to: ../data/processed/tv_shows_info_{}.pkl'.format(f_num))        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-11T15:21:59.534923Z",
+     "start_time": "2019-07-11T15:21:59.526264Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "441"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(temp_list)"
    ]
   },
   {
@@ -19,9 +299,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "tmdb."
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -74,6 +352,13 @@
      "library": "var_list.r",
      "varRefreshCmd": "cat(var_dic_list()) "
     }
+   },
+   "position": {
+    "height": "452px",
+    "left": "1013px",
+    "right": "20px",
+    "top": "135px",
+    "width": "393px"
    },
    "types_to_exclude": [
     "module",
