Add Data Cleaning NB

--- a/notebooks/jss_data_tvdb_api.ipynb
+++ b/notebooks/jss_data_tvdb_api.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T13:50:26.267370Z",
-     "start_time": "2019-07-16T13:50:24.698772Z"
+     "end_time": "2019-07-16T18:51:12.951032Z",
+     "start_time": "2019-07-16T18:51:10.353567Z"
     }
    },
    "outputs": [],
@@ -4805,7 +4805,8 @@
    "source": [
     "columns_to_drop = ['backdrop_path', 'homepage', 'last_episode_to_air', \n",
     "                   'next_episode_to_air', 'languages', 'overview_show',\n",
-    "                   'seasons', 'overview_ep', 'show_id', 'production_code', 'still_path']"
+    "                   'seasons', 'overview_ep', 'show_id', 'production_code', \n",
+    "                   'still_path', 'poster_path']"
    ]
   },
   {
