Add IMDB ID Search

--- a/notebooks/jss_data_tvdb_api.ipynb
+++ b/notebooks/jss_data_tvdb_api.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T18:51:12.951032Z",
-     "start_time": "2019-07-16T18:51:10.353567Z"
+     "end_time": "2019-07-17T02:20:19.163458Z",
+     "start_time": "2019-07-17T02:20:17.169858Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T13:50:28.085419Z",
-     "start_time": "2019-07-16T13:50:28.080264Z"
+     "end_time": "2019-07-17T02:21:00.262433Z",
+     "start_time": "2019-07-17T02:21:00.251249Z"
     }
    },
    "outputs": [],
@@ -61,8 +61,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T13:50:29.522751Z",
-     "start_time": "2019-07-16T13:50:29.210870Z"
+     "end_time": "2019-07-17T00:48:09.918298Z",
+     "start_time": "2019-07-17T00:48:09.616392Z"
     }
    },
    "outputs": [],
@@ -76,8 +76,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T13:50:30.293590Z",
-     "start_time": "2019-07-16T13:50:30.285680Z"
+     "end_time": "2019-07-17T00:48:11.106495Z",
+     "start_time": "2019-07-17T00:48:11.096209Z"
     }
    },
    "outputs": [],
@@ -91,8 +91,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T13:50:42.007232Z",
-     "start_time": "2019-07-16T13:50:38.753490Z"
+     "end_time": "2019-07-17T00:48:16.947698Z",
+     "start_time": "2019-07-17T00:48:14.292554Z"
     }
    },
    "outputs": [
@@ -134,8 +134,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T13:51:00.350270Z",
-     "start_time": "2019-07-16T13:51:00.313347Z"
+     "end_time": "2019-07-17T00:48:20.529769Z",
+     "start_time": "2019-07-17T00:48:20.496514Z"
     }
    },
    "outputs": [
@@ -261,11 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T15:42:12.231474Z",
-     "start_time": "2019-07-16T15:42:10.542346Z"
+     "end_time": "2019-07-17T01:06:15.100260Z",
+     "start_time": "2019-07-17T01:06:14.271386Z"
     }
    },
    "outputs": [
@@ -275,7 +275,7 @@
        "(82817, 28)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,8 +627,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T13:51:34.344532Z",
-     "start_time": "2019-07-16T13:51:15.334978Z"
+     "end_time": "2019-07-17T00:48:43.372562Z",
+     "start_time": "2019-07-17T00:48:27.276542Z"
     }
    },
    "outputs": [
@@ -671,8 +671,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T13:54:11.425005Z",
-     "start_time": "2019-07-16T13:54:10.403974Z"
+     "end_time": "2019-07-17T00:49:34.170368Z",
+     "start_time": "2019-07-17T00:49:33.911913Z"
     }
    },
    "outputs": [
@@ -702,8 +702,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T13:57:06.268281Z",
-     "start_time": "2019-07-16T13:57:06.174908Z"
+     "end_time": "2019-07-17T00:50:23.653139Z",
+     "start_time": "2019-07-17T00:50:23.543385Z"
     }
    },
    "outputs": [
@@ -726,11 +726,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T01:11:34.722596Z",
-     "start_time": "2019-07-16T01:11:34.698743Z"
+     "end_time": "2019-07-17T00:51:12.558847Z",
+     "start_time": "2019-07-17T00:51:12.540231Z"
     }
    },
    "outputs": [
@@ -753,11 +753,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T14:00:12.338682Z",
-     "start_time": "2019-07-16T14:00:12.189045Z"
+     "end_time": "2019-07-17T00:52:00.697808Z",
+     "start_time": "2019-07-17T00:52:00.563540Z"
     }
    },
    "outputs": [],
@@ -767,11 +767,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T14:03:09.659270Z",
-     "start_time": "2019-07-16T14:03:09.601207Z"
+     "end_time": "2019-07-17T00:53:01.649419Z",
+     "start_time": "2019-07-17T00:53:01.592455Z"
     }
    },
    "outputs": [
@@ -781,7 +781,7 @@
        "113338"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2570,11 +2570,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T12:11:31.984710Z",
-     "start_time": "2019-07-16T12:11:31.741199Z"
+     "end_time": "2019-07-17T00:53:57.797770Z",
+     "start_time": "2019-07-17T00:53:57.498820Z"
     }
    },
    "outputs": [],
@@ -2613,11 +2613,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T15:17:07.960658Z",
-     "start_time": "2019-07-16T15:17:07.608653Z"
+     "end_time": "2019-07-17T00:54:49.046535Z",
+     "start_time": "2019-07-17T00:54:48.469174Z"
     }
    },
    "outputs": [],
@@ -2634,11 +2634,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T15:17:12.065562Z",
-     "start_time": "2019-07-16T15:17:12.059126Z"
+     "end_time": "2019-07-17T00:55:40.246636Z",
+     "start_time": "2019-07-17T00:55:40.233968Z"
     }
    },
    "outputs": [
@@ -2648,7 +2648,7 @@
        "1669306"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2659,11 +2659,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T16:48:19.579804Z",
-     "start_time": "2019-07-16T16:48:17.979108Z"
+     "end_time": "2019-07-17T00:56:34.625386Z",
+     "start_time": "2019-07-17T00:56:32.507051Z"
     }
    },
    "outputs": [],
@@ -2681,11 +2681,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T16:49:19.330008Z",
-     "start_time": "2019-07-16T16:49:11.175996Z"
+     "end_time": "2019-07-17T00:58:05.937629Z",
+     "start_time": "2019-07-17T00:57:59.397061Z"
     }
    },
    "outputs": [],
@@ -2695,11 +2695,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T16:50:11.660030Z",
-     "start_time": "2019-07-16T16:50:11.529148Z"
+     "end_time": "2019-07-17T00:59:44.981975Z",
+     "start_time": "2019-07-17T00:59:44.710353Z"
     }
    },
    "outputs": [
@@ -4103,7 +4103,7 @@
        "[67 rows x 13 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4114,11 +4114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T16:53:51.472086Z",
-     "start_time": "2019-07-16T16:53:43.685597Z"
+     "end_time": "2019-07-17T01:06:31.193632Z",
+     "start_time": "2019-07-17T01:06:25.498038Z"
     }
    },
    "outputs": [],
@@ -4128,11 +4128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T16:54:00.189723Z",
-     "start_time": "2019-07-16T16:54:00.120630Z"
+     "end_time": "2019-07-17T01:06:40.862832Z",
+     "start_time": "2019-07-17T01:06:40.766377Z"
     }
    },
    "outputs": [
@@ -4525,7 +4525,7 @@
        "4            1.0    601.0       None              0.0            0.0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4536,11 +4536,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T16:54:23.588409Z",
-     "start_time": "2019-07-16T16:54:23.580828Z"
+     "end_time": "2019-07-17T01:06:48.032903Z",
+     "start_time": "2019-07-17T01:06:48.025741Z"
     }
    },
    "outputs": [
@@ -4550,7 +4550,7 @@
        "(1699153, 41)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4561,11 +4561,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T16:57:57.020229Z",
-     "start_time": "2019-07-16T16:57:50.502126Z"
+     "end_time": "2019-07-17T01:07:00.289679Z",
+     "start_time": "2019-07-17T01:06:52.813111Z"
     }
    },
    "outputs": [
@@ -4616,7 +4616,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4627,178 +4627,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T17:07:08.705889Z",
-     "start_time": "2019-07-16T17:06:43.752765Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# replace empty lists with nan to get more accurate measure of missing values\n",
-    "merge_shows_episodes_df = merge_shows_episodes_df.mask(merge_shows_episodes_df.applymap(type).eq(list) & ~merge_shows_episodes_df.astype(bool))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-07-16T17:08:27.228202Z",
-     "start_time": "2019-07-16T17:08:21.195912Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "backdrop_path           0.348405\n",
-       "created_by              0.583551\n",
-       "episode_run_time        0.152288\n",
-       "first_air_date          0.044247\n",
-       "genres                  0.246189\n",
-       "homepage                0.000000\n",
-       "id_show                 0.000000\n",
-       "in_production           0.000000\n",
-       "languages               0.169211\n",
-       "last_air_date           0.039476\n",
-       "last_episode_to_air     0.039476\n",
-       "name_show               0.000000\n",
-       "networks                0.185211\n",
-       "next_episode_to_air     0.974313\n",
-       "number_of_episodes      0.000894\n",
-       "number_of_seasons       0.000000\n",
-       "origin_country          0.100657\n",
-       "original_language       0.000000\n",
-       "original_name           0.000000\n",
-       "overview_show           0.000000\n",
-       "popularity              0.000000\n",
-       "poster_path             0.276914\n",
-       "production_companies    0.623106\n",
-       "seasons                 0.016485\n",
-       "status                  0.000000\n",
-       "type                    0.000000\n",
-       "vote_average_show       0.000000\n",
-       "vote_count_show         0.000000\n",
-       "air_date                0.098899\n",
-       "crew                    0.910268\n",
-       "episode_number          0.017566\n",
-       "guest_stars             0.873350\n",
-       "id_ep                   0.017566\n",
-       "name_ep                 0.017566\n",
-       "overview_ep             0.017566\n",
-       "production_code         0.704924\n",
-       "season_number           0.017597\n",
-       "show_id                 0.017566\n",
-       "still_path              0.838987\n",
-       "vote_average_ep         0.017566\n",
-       "vote_count_ep           0.017566\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merge_shows_episodes_df.isna().sum() / len(merge_shows_episodes_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-07-16T17:16:14.395601Z",
-     "start_time": "2019-07-16T17:16:13.749461Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "en    1089243\n",
-       "ja     114423\n",
-       "de     101310\n",
-       "fr      69720\n",
-       "es      53551\n",
-       "ko      47700\n",
-       "zh      31440\n",
-       "pt      31088\n",
-       "pl      22249\n",
-       "nl      21612\n",
-       "ru      15097\n",
-       "cs      11369\n",
-       "tr       9448\n",
-       "sv       9158\n",
-       "it       8690\n",
-       "no       6818\n",
-       "hi       6298\n",
-       "fi       5213\n",
-       "ar       4924\n",
-       "da       4868\n",
-       "th       3657\n",
-       "he       3510\n",
-       "hu       3022\n",
-       "ka       2999\n",
-       "ur       2778\n",
-       "sk       2233\n",
-       "cn       2033\n",
-       "ms       1740\n",
-       "bg       1362\n",
-       "ro       1140\n",
-       "       ...   \n",
-       "af         53\n",
-       "mo         45\n",
-       "ho         39\n",
-       "mk         37\n",
-       "lv         33\n",
-       "sl         33\n",
-       "sh         32\n",
-       "nn         30\n",
-       "za         29\n",
-       "ne         27\n",
-       "hz         27\n",
-       "jv         25\n",
-       "so         18\n",
-       "my         18\n",
-       "sq         18\n",
-       "fy         16\n",
-       "as         15\n",
-       "se         15\n",
-       "st         13\n",
-       "eu         12\n",
-       "am          6\n",
-       "lt          6\n",
-       "kk          6\n",
-       "si          3\n",
-       "az          2\n",
-       "km          2\n",
-       "av          1\n",
-       "pa          1\n",
-       "mi          1\n",
-       "ht          1\n",
-       "Name: original_language, Length: 86, dtype: int64"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merge_shows_episodes_df.original_language.apply(lambda x: tuple(x) if type(x)==list else x).value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-07-16T18:01:55.620652Z",
-     "start_time": "2019-07-16T18:01:55.609816Z"
+     "end_time": "2019-07-17T01:07:40.596183Z",
+     "start_time": "2019-07-17T01:07:40.587030Z"
     }
    },
    "outputs": [],
@@ -4806,16 +4639,16 @@
     "columns_to_drop = ['backdrop_path', 'homepage', 'last_episode_to_air', \n",
     "                   'next_episode_to_air', 'languages', 'overview_show',\n",
     "                   'seasons', 'overview_ep', 'show_id', 'production_code', \n",
-    "                   'still_path', 'poster_path']"
+    "                   'still_path', 'poster_path', 'still_path']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T18:06:19.953771Z",
-     "start_time": "2019-07-16T18:06:16.540694Z"
+     "end_time": "2019-07-17T01:07:49.325490Z",
+     "start_time": "2019-07-17T01:07:45.528296Z"
     }
    },
    "outputs": [],
@@ -4827,11 +4660,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T18:07:05.572150Z",
-     "start_time": "2019-07-16T18:06:56.811409Z"
+     "end_time": "2019-07-17T01:08:13.777913Z",
+     "start_time": "2019-07-17T01:08:05.060961Z"
     }
    },
    "outputs": [],
@@ -4840,6 +4673,99 @@
     "    pickle.dump(export_df, f)\n",
     "\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-17T02:49:32.110841Z",
+     "start_time": "2019-07-17T02:49:32.107063Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "a=tmdb.TV_Episodes(604, 1 , 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-17T02:49:32.654058Z",
+     "start_time": "2019-07-17T02:49:32.552641Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 34373,\n",
+       " 'imdb_id': None,\n",
+       " 'freebase_mid': '/m/0kt01jd',\n",
+       " 'freebase_id': None,\n",
+       " 'tvdb_id': 48181,\n",
+       " 'tvrage_id': None}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.external_ids()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-17T02:49:33.098780Z",
+     "start_time": "2019-07-17T02:49:32.969496Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'air_date': '2003-07-20',\n",
+       " 'crew': [{'id': 127380,\n",
+       "   'credit_id': '525389e119c295794023a4f6',\n",
+       "   'name': 'Michael Chang',\n",
+       "   'department': 'Directing',\n",
+       "   'job': 'Director',\n",
+       "   'gender': 2,\n",
+       "   'profile_path': None},\n",
+       "  {'id': 127383,\n",
+       "   'credit_id': '525389e019c295794023a47b',\n",
+       "   'name': 'David Slack',\n",
+       "   'department': 'Writing',\n",
+       "   'job': 'Writer',\n",
+       "   'gender': 2,\n",
+       "   'profile_path': '/lFxuKUPYGwLlEPzE74QgHfxizjx.jpg'}],\n",
+       " 'episode_number': 1,\n",
+       " 'guest_stars': [],\n",
+       " 'name': 'Final Exam',\n",
+       " 'overview': \"Three H.I.V.E. graduates, Mammoth, Jinx, and Gizmo, are sent by the mysterious Slade to attack the Titans. While presumably well-trained and able to control their powers, the Titans get completely overpowered by the bad guys! Will the Titans be able to defeat these three villains and ruin Slade's plan?\",\n",
+       " 'id': 34373,\n",
+       " 'production_code': '',\n",
+       " 'season_number': 1,\n",
+       " 'still_path': '/dMPWTfiBIkTqfHDDhFEDHQc5Kql.jpg',\n",
+       " 'vote_average': 7.5,\n",
+       " 'vote_count': 2}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.info()"
    ]
   },
   {
